ns-deploy-lb.yml
---
# 네임스페이스 작성 (별도의 프로젝트 공간)
apiVersion: v1
kind: Namespace
metadata: 
  name: project

---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-deploy
  namespace: project
  labels:
    app: web
    part: cloud
spec:
  replicas: 3
  selector: # 어떤 라벨을 확인할 것인가 ?
    matchLabels: 
      app: web # deploy의 라벨이 아니라 Pod의 라벨을 지정한다.
  template:    # 이 부분 부터 Pod에 대한 정의를 한다.
    metadata:  # name을 별도로 지정할 필요는 없음. deploy이름-rs이름-pod이름 조합
      labels:
        app: web
    spec:       # Pod 내에 들어갈 것들 (컨테이너)
      containers:
        - name: web
          image: nginx
          ports:
          - containerPort: 80
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: project-lb
  namespace: project
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 80           # LB 포트. 
    targetPort: 80
