svc_deploy_default.yml
---
# svc-default > cluster-ip(default)
apiVersion: v1
kind: Service
metadata:
  name: svc-default
  namespace: project
spec:
  selector:
    app: default
  ports:
  - port: 80
    targetPort: 80
---
# deploy-default
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default
  namespace: project
spec:
  replicas: 3
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
      - name: default
        image: paperdoll96/portal:main
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
