svc_deploy_shop.yml
---
# svc-shop -> Cluster IP (Default)
apiVersion: v1
kind: Service
metadata:
  name: svc-shop # rule에 있는 svc-shop 과 같아야함 !  ! ! ! ! ! ! ! !
  namespace: project
spec:
  selector:
    app: shop
  ports:
  - port: 80
    targetPort: 80


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop
  namespace: project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shop
  template:
    metadata:
      labels:
        app: shop
    spec:
      containers:
      - name: shop
        image: paperdoll96/portal:shop
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80

# deploy-shop
